Bug 75525 - Unable reduce the amount of space on the left and right of a formula.
Summary: Unable reduce the amount of space on the left and right of a formula.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2014-02-26 12:01 UTC by kzmrz1957
Modified: 2015-12-17 07:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shot (495.66 KB, image/bmp)
2014-02-26 12:01 UTC, kzmrz1957
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kzmrz1957 2014-02-26 12:01:47 UTC
Created attachment 94764 [details]
Screen shot

See the question titled "How do I reduce the amount of space on the left and right of a formula?" in Ask LibreOffice.

LibreOffice 4.2.1.1, Writer + Math Windows XP

I've created formulas which are inline within the text. However, the presence of space on the left and right of the formula mean the appearance of the text + formulas just does not look right.

There are two places where space to the left and right of a formula can be reduced. The first is in the Formula Frame Style which I've been able to reduce.

The second is the spacing within the formula within the Borders category. I have not been able to reduce this. See the attached screen shot. It shows the default values which I could not alter.

I would put the cursor into the 'Left' field and change it to 0. When I moved the cursor to the 'Right' field to change that value to 0, the value in the 'Left' field would revert to what is shown on the screen shot above. I could not make the values in the 'Left' and 'Right' fields stay 0.
Comment 1 Regina Henschel 2014-02-26 13:46:35 UTC
I see the error here too. I use Version: 4.3.0.0.alpha0+
Build ID: f839b5dd16c05c0eda21345ec36ec0cb024eb732
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-02-23_09:54:38 and Version: 4.2.1.1
Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b
both on Windows 7.
Comment 2 Jean-Baptiste Faure 2014-03-01 13:48:13 UTC
Confirmed on Linux/Ubuntu 13.10 x86-64 too.
Set regression keyword because it works as expected (borders spacings set to 1 mm by default) in LibreOffice 4.1.5

Best regards. JBF
Comment 3 Andras Timar 2014-04-15 20:01:57 UTC
caused by .ui conversion:
commit a591f0dd0fdf41b3fd8922cdeae479afc692e439
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed May 22 11:03:42 2013 +0100

    adapt code to spacing dialog .ui conversion
Comment 4 Commit Notification 2014-04-16 12:05:59 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12984e46704f1e55f76b210cf65217e54662dc26

Resolves: fdo#75525 out by one error



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2014-04-16 12:10:38 UTC
and https://gerrit.libreoffice.org/9066 for 4-2
Comment 6 Commit Notification 2014-04-16 19:47:05 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7e32ba07910956bd09d79e37eb8ce6eb8a0ac30&h=libreoffice-4-2

Resolves: fdo#75525 out by one error


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-04-17 14:16:15 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0fca42bf7c192292d0ab5058d6b1815477bf57c&h=libreoffice-4-2-4

Resolves: fdo#75525 out by one error


It will be available already in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 07:50:57 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]