Resolves: fdo#75525 out by one error

Change-Id: I0171d2a79b6b015fa2f01d78228e901005017fb0